# fefe-interim

./: .gitignore  build.py  pyproject.toml
.github/workflows/: deploy.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-project-foundation/: 01-01-SUMMARY.md
.planning/phases/03-site-generator/: 03-02-SUMMARY.md  03-03-SUMMARY.md
data/: posts-cache.json
generator/: __init__.py  feed.py  site.py
output/: feed.xml
scraper/: __init__.py  fetch.py  scoring.py  types.py
static/: style.css
templates/: archive.html  base.html  index.html
