[project]
name = "fefe-interim"
version = "0.1.0"
description = "Statischer Interim-Blog fuer r/fefe_blog_interim"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "markupsafe>=2.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper", "generator"]
